deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-clone-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reddit-clone
  template:
    metadata:
      labels:
        app: reddit-clone
    spec:
      containers:
      - name: reddit-clone
        image: tanishkamarrott/reddit:latest
        ports:
        - containerPort: 3000
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: reddit-clone
