service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Using Network Load Balancer for better performance and scalability
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true" # Enabling cross-zone load balancing for higher availability
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60" # Setting a lower connection idle timeout for better performance and scalability
spec:
  selector:
    app: reddit-clone
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local # Preserving the client source IP and avoid a second hop for LoadBalancer traffic
